--- a/aboutMDLH.html
+++ b/aboutMDLH.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style01.css">
+    <!-- <link rel="stylesheet" href="./style02.css">
+    <link rel="stylesheet" href="./style03.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
