comenzando con CSS

--- a/aboutMDLH.html
+++ b/aboutMDLH.html
@@ -18,12 +18,12 @@
             <a href="./contact.html">contact</a>
         </nav>
         <figure>
-            <img src="./logoMDucks.png" alt="Logo MDHL">
+            <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
         </figure>
     </header>
     <main>
         <figure>
-            <img src="./image02.jpg" alt="imagen 2">
+            <img src="./src/image1.jpg" alt="imagen 1">
         </figure>
 
         <h3>Mision</h3>
