--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,12 @@
             <a href="#">contact</a>
         </nav>
         <figure>
-            <img src="./logoMDucks.png" alt="Logo MDHL">
+            <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
         </figure>
     </header>
     <main>
         <figure>
-            <img src="./image03.jpg" alt="imagen 3">
+            <img src="./src/image1.jpg" alt="imagen 1">
         </figure>
 
         <p>Please email us at <a href="mdlh@chihockey.org">mdlh@chihockey.org</a> </p>  
