--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <a href="./contact.html">contact</a>
         </nav>
         <figure>
-            <img src="./logoMDucks.png" alt="Logo MDHL">
+            <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
         </figure>
     </header>
     <main>
         <figure>
-            <img src="./image01.jpg" alt="imagen 1">
+            <img src="./src/image1.jpg" alt="imagen 1">
         </figure>
         <section>
             <h2>Upcoming Events</h2>
