diseño 1 almost finished

--- a/contact.html
+++ b/contact.html
@@ -11,23 +11,21 @@
 </head>
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="./aboutMDLH.html">About MDLH</a>
-            <a href="#">contact</a>
-        </nav>
-        <figure>
+        <h1 class="encabezado">Mighty Ducks Hockey League</h1>
+    
             <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
-        </figure>
+    
+        <nav>
+            <a class="navMenu" href="#">Home</a>
+            <a class="navMenu" href="./aboutMDLH.html">About MDLH</a>
+            <a class="navMenu"href="./contact.html">Contact</a>
+        </nav>
     </header>
-    <main>
-        <figure>
-            <img src="./src/image1.jpg" alt="imagen 1">
-        </figure>
 
-        <p>Please email us at <a href="mdlh@chihockey.org">mdlh@chihockey.org</a> </p>  
-        <p>We reply to your email as soon as we can.</p>  
+    <main>
+        <h2>Contact</h2>
+                <p class="articleMain">Please email us at <a href="mdlh@chihockey.org">mdlh@chihockey.org</a> </p>  
+                <p class="articleMain">We reply to your email as soon as we can.</p>  
  
     </main>
     <footer>
