--- a/index.html
+++ b/index.html
@@ -11,36 +11,30 @@
 </head>
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="./aboutMDLH.html">About MDLH</a>
-            <a href="./contact.html">contact</a>
-        </nav>
-        <figure>
+        <h1 class="encabezado">Mighty Ducks Hockey League</h1>
+    
             <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
-        </figure>
+    
+        <nav>
+            <a class="navMenu" href="#">Home</a>
+            <a class="navMenu" href="./aboutMDLH.html">About MDLH</a>
+            <a class="navMenu"href="./contact.html">Contact</a>
+        </nav>
     </header>
     <main>
-        <figure>
-            <img src="./src/image1.jpg" alt="imagen 1">
-        </figure>
-        <section>
-            <h2>Upcoming Events</h2>
-            <article> 
+        <h2>Upcoming Events</h2>
+            <article class="articleMain"> 
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>  
             </article>
-            <article> 
+            <article class="articleMain"> 
                 <h3>August 16</h3>
                 <p>Season Kick-off: Meet the Teams</p>  
             </article>
-            <article> 
+            <article class="articleMain"> 
                 <h3>September 1</h3>
                 <p>First Game of the Season (Check Game Schedule for details)</p>  
             </article>
-
-        </section>
     </main>
     <footer>
         <p>Silvina C. Prieto-2023</p>
