--- a/aboutMDLH.html
+++ b/aboutMDLH.html
@@ -16,7 +16,7 @@
         <nav>
             <a class="navMenu" href="index.html">Home</a>
             <a class="navMenu" href="#">About MDLH</a>
-            <a class="navMenu"href="./contact.html">Contact</a>
+            <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
     
@@ -39,7 +39,7 @@
                     member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                     neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
                     parents and previous league members</p>
-
+            </article>
     </main>
     <footer>
         <p>Silvina C. Prieto- 2023</p>
