--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style01.css">
-    <!-- <link rel="stylesheet" href="./styles/style02.css">
-    <link rel="stylesheet" href="./styles/style03.css"> -->
+    <!-- <link rel="stylesheet" href="./styles/style01.css"> -->
+    <link rel="stylesheet" href="./styles/style02.css">
+    <!-- <link rel="stylesheet" href="./styles/style03.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
@@ -17,7 +17,8 @@
     
         <nav>
             <a class="navMenu" href="#">Home</a>
-            <a class="navMenu" href="./aboutMDLH.html">About MDLH</a>
+            <a class="navMenu long" href="./aboutMDLH.html">About MDLH</a>
+            <a class="navMenu short" href="./aboutMDLH.html">About</a>
             <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
