--- a/aboutMDLH.html
+++ b/aboutMDLH.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style01.css">
-    <!-- <link rel="stylesheet" href="./styles/style02.css">
-    <link rel="stylesheet" href="./styles/style03.css"> -->
+    <!-- <link rel="stylesheet" href="./styles/style01.css"> -->
+    <!-- <link rel="stylesheet" href="./styles/style02.css"> -->
+    <link rel="stylesheet" href="./styles/style03.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
@@ -15,8 +15,9 @@
         <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
         <nav>
             <a class="navMenu" href="index.html">Home</a>
-            <a class="navMenu" href="#">About MDLH</a>
-            <a class="navMenu"href="./contact.html">Contact</a>
+            <a class="navMenu long" href="./aboutMDLH.html">About MDLH</a>
+            <a class="navMenu short" href="./aboutMDLH.html">About</a>
+            <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
     
@@ -39,7 +40,7 @@
                     member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                     neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
                     parents and previous league members</p>
-
+            </article>
     </main>
     <footer>
         <p>Silvina C. Prieto- 2023</p>
