nav bar edited using flex

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <a class="navMenu" href="#">Home</a>
             <a class="navMenu long" href="./aboutMDLH.html">About MDLH</a>
             <a class="navMenu short" href="./aboutMDLH.html">About</a>
+            <a class="navMenu" href="./gameSchedule.html">Game Schedule</a>
+            <a class="navMenu" href="./terms&conditions.html">Terms and Conditions</a>
             <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
