--- a/aboutMDLH.html
+++ b/aboutMDLH.html
@@ -14,9 +14,11 @@
         <h1 class="encabezado">Mighty Ducks Hockey League</h1>
         <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
         <nav>
-            <a class="navMenu" href="index.html">Home</a>
+            <a class="navMenu" href="#">Home</a>
             <a class="navMenu long" href="./aboutMDLH.html">About MDLH</a>
             <a class="navMenu short" href="./aboutMDLH.html">About</a>
+            <a class="navMenu" href="./gameSchedule.html">Game Schedule</a>
+            <a class="navMenu" href="./terms&conditions.html">Terms and Conditions</a>
             <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
