rules and policies done

--- a/aboutMDLH.html
+++ b/aboutMDLH.html
@@ -14,17 +14,17 @@
         <h1 class="encabezado">Mighty Ducks Hockey League</h1>
         <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
         <nav>
-            <a class="navMenu" href="#">Home</a>
+            <a class="navMenu" href="./index.html">Home</a>
             <a class="navMenu long" href="./aboutMDLH.html">About MDLH</a>
             <a class="navMenu short" href="./aboutMDLH.html">About</a>
-            <a class="navMenu" href="./gameSchedule.html">Game Schedule</a>
-            <a class="navMenu" href="./terms&conditions.html">Terms and Conditions</a>
+            <a class="navMenu" href="./gameInfo.html">Game Information</a>
+            <a class="navMenu" href="./rules.html">Rules and Policies</a>
             <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
     
-    <main>
-        <h2>About MDHL</h2>
+    <main class="mainHome">
+        <h2 class="h2home">About MDHL</h2>
             <article class="articleMain"> 
                 <h3>Mision</h3>
                 <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>  
