--- a/contact.html
+++ b/contact.html
@@ -16,17 +16,17 @@
         <img class="logoMDHL" src="./src/LogoMDucks.png" alt="Logo MDHL">
     
         <nav>
-            <a class="navMenu" href="#">Home</a>
+            <a class="navMenu" href="./index.html">Home</a>
             <a class="navMenu long" href="./aboutMDLH.html">About MDLH</a>
             <a class="navMenu short" href="./aboutMDLH.html">About</a>
-            <a class="navMenu" href="./gameSchedule.html">Game Schedule</a>
-            <a class="navMenu" href="./terms&conditions.html">Terms and Conditions</a>
+            <a class="navMenu" href="./gameInfo.html">Game Information</a>
+            <a class="navMenu" href="./rules.html">Rules and Policies</a>
             <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
 
-    <main>
-        <h2>Contact</h2>
+    <main class="mainHome">
+        <h2 class="h2home">Contact</h2>
                 <p class="articleMain">Please email us at <a href="mdlh@chihockey.org">mdlh@chihockey.org</a> </p>  
                 <p class="articleMain">We reply to your email as soon as we can.</p>  
  
