--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <a class="navMenu" href="#">Home</a>
             <a class="navMenu long" href="./aboutMDLH.html">About MDLH</a>
             <a class="navMenu short" href="./aboutMDLH.html">About</a>
-            <a class="navMenu" href="./gameSchedule.html">Game Schedule</a>
-            <a class="navMenu" href="./terms&conditions.html">Terms and Conditions</a>
+            <a class="navMenu" href="./gameInfo.html">Game Information</a>
+            <a class="navMenu" href="./rules.html">Rules and Policies</a>
             <a class="navMenu" href="./contact.html">Contact</a>
         </nav>
     </header>
-    <main>
-        <h2>Upcoming Events</h2>
+    <main class="mainHome">
+        <h2 class="h2home">Upcoming Events</h2>
             <article class="articleMain"> 
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>  
