rules and css checked, registration page created

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
             <a class="navMenu" href="./gameInfo.html">Game Information</a>
             <a class="navMenu" href="./rules.html">Rules and Policies</a>
             <a class="navMenu" href="./contact.html">Contact</a>
+            <a class="navMenu" href="./registration.html">Register</a>
         </nav>
     </header>
 
