--- a/gameInfo.html
+++ b/gameInfo.html
@@ -20,6 +20,7 @@
             <a class="navMenu" href="./gameInfo.html">Game Information</a>
             <a class="navMenu" href="./rules.html">Rules and Policies</a>
             <a class="navMenu" href="./contact.html">Contact</a>
+            <a class="navMenu" href="./registration.html">Register</a>
         </nav>
     </header>
 
@@ -33,6 +34,20 @@
                     <th>Location</th>
                     <th>Times</th>
                 </tr>
+                <tr>
+                    <td>9/01</td>
+                    <td>U1 and U4</td>
+                    <td>AJ Katzenmaier</td>
+                    <td></td>
+                </tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
                 
 
             </table>
