mapas agregados task 4 validada

--- a/gameInfo.html
+++ b/gameInfo.html
@@ -43,7 +43,7 @@
                     <tr>
                         <td rowspan="2" class="day">9/01</td>
                         <td>U1 and U4</td>
-                        <td>AJ Katzenmaier</td>
+                        <td>AJ Katzenmaier </td>
                         <td>9:30 a.m.</td>
                     </tr>
                     <tr>
@@ -113,7 +113,50 @@
                  </tfoot>
             </table>
         </section>
-       
+        <section >
+            <h2 class="h2maps">Location's maps</h2>
+            <div class="mapsflex">
+                <div>                    
+                    <article class="container_maps">
+                        <h3 class="h3maps">AJ Katzenmaier </h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.6570181484617!2d-87.6312580851845!3d41.90023277200898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses!2sar!4v1675981412086!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </article>
+                    <article class="container_maps">
+                        <h3 class="h3maps">Greenbay</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.0227959922263!2d-87.64002218518398!3d41.913868671155114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675987562310!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </article>
+                </div>
+                <div>
+                    <article class="container_maps">
+                        <h3 class="h3maps">Howard A Yeager</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698766737694!2d-87.85606978516932!3d42.31544224591186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675989785770!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </article>
+                    <article class="container_maps">
+                        <h3 class="h3maps">Marjorie P Hart</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.289653643584!2d-87.64816138518344!3d41.929626870168214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses!2sar!4v1675989896316!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </article>
+                </div>
+                <div>
+                    <article class="container_maps">
+                        <h3 class="h3maps">North Elementary</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d758464.4900105266!2d-88.52895895395062!3d42.04849989278277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses!2sar!4v1676036820385!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </article>
+                    <article class="container_maps">
+                        <h3 class="h3maps">South Elementary</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d758472.687212365!2d-88.5289693934776!3d42.047813331630266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb7ad3c474b63%3A0x93bdf85af2a839ed!2sSOUTH%20ELEMENTARY%20SCHOOL!5e0!3m2!1ses!2sar!4v1676037069221!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </article>
+                </div>
+            </div>
+
+
+
+
+
+
+
+            
+        </section>
+
     </main>
     <footer>
         <p>Silvina C. Prieto- 2023</p>
